# proposal-inverter

./: .gitignore  .pylintrc  Matrix-Factorization.ipynb  cadcad-template.ipynb  manufacturing_features_for_matrix_factorization.ipynb  parameterized_proposal_inverter.ipynb  pi_output_visualisation.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: pylint.yaml  pytest.yaml
parameterized/: actions.py  agreement.py  dogfood_mode_2022.py  dogfood_model.py  funds.py  hyperparameters.py  policies.py  price_oracle.py  proposal_inverter.py  simulation.py  state_updates.py  test_broker.py  test_owner.py  test_proposal_inverter.py  test_use_case.py  test_wallet.py  test_whitelist_mechanism.py  whitelist_mechanism.py
parameterized/tests/: test_funds.py  test_price_oracle.py  test_proposal_inverter.py  test_wallet.py  test_whitelist_mechanism.py
